--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body  id="body">
 <input type="text" id="textEl">
-<div id="result" style="margin-top: 2rem; font-weight: bold">
+<div id="result" style="margin-top: 2rem">
 
 </div>
 <script src="index.js"></script>
